2005-09-15  Jost Boekemeier  <jostb@intern>

	* java_bridge.c (checkError): Do not longjmp, this may confuse
	other modules.

	* java.c (allocate_php4_exception): Do not use longjmp.

	* examples/bench/callback3.php: correct path.

	* server/php/java/servlet/CGIServlet.java (run): Dispose the
	executable, for PR1291175.

	* tests.php5/instanceof.php: Rewritten, for PR1286136.

	* VERSION, php-java-bridge.spec: Version 2.0.8RC5 fixes PR1286136 and 1291175.
	
2005-09-15  Jost Boekemeier  <jostb@intern>

	* client.c (begin): Display protocol error if we receive HTML

	* java.c (session): Accept 0 parameters

	* parser.c (parse): push when we receive a begin
	(e.g. <html></html>) This fixes a crash when parsing HTML error
	pages.

	* php/java/bridge/DynamicJavaBridgeClassLoader.java
	(resolveLibraryName): pass an absolute path even if extension_dir
	is set to "." (PR1286643)

	* php/java/servlet/CGIServlet.java: Rewritten to allow POST
	data. The problem with the old solution was that the parameters
	were extracted before opening the InputStream. Since the getter
	operates on both, the URL parameters and the InputStream, the post
	parameters were gone after that. (PR1291191)

	* php/java/servlet/ContextRunner.java (init): Throw a NP with a
	description if we receive an invalid context.
	(PR 1291175)

	* VERSION, php-java-bridge.spec: Version 2.0.8RC4 fixes PR1291191, PR 1291175 and PR1286643.
	
	
2005-09-12  Jost Boekemeier  <jostb@intern>

	* php_java_snprintf.h: Added missing header.

	* config.m4: Clarify warning message.

	* java.c (session) accept 0..2 parameters.

	* php-java-bridge.te: Added missing right to create /var/log/php-java-bridge.log

	* protocol.c (setResultWith_context): Do not change the path, otherwise we end up with
	cookies which have different paths.

	* php/java/bridge/DynamicJavaBridgeClassLoader.java (updateJarLibraryPath): GNU java throws null pointer exception when it cannot connect to a remote URL.
